# django-unpoly-project

./: .gitignore  .pdm-python  Makefile  README.md  issues.json  package.json  pnpm-lock.yaml  pyproject.toml
apps/issues/: admin.py  forms.py  models.py  urls.py  views.py
apps/issues/migrations/: 0001_initial.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py
config/: martor.py  settings.py  urls.py
static/src/: input.css  output.css
templates/: base.html
templates/issues/: create.html  detail.html  index.html
templates/partials/: footer.html  issue_card.html  issue_form.html  navbar.html  search_new.html
