[project]
name = "django-unpoly-project"
version = "0.1.0"
description = "Django-Unpoly-Project est une application web développée avec Django et Unpoly, offrant une expérience utilisateur dynamique et interactive."
authors = [
    {name = "Macktireh", email = "abdimack97@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django>=5.0.4",
    "django-colorfield>=0.11.0",
    "django-compressor>=4.4",
    "django-unfold>=0.22.0",
]


[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.2",
]


[tool.pdm]
distribution = false


[tool.pdm.scripts]
newapp = "python manage.py startapp"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
start = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
qcluster = "python manage.py qcluster"
qmonitor = "python manage.py qmonitor"
qinfo = "python manage.py qinfo"
tailwind = "npx tailwindcss -i ./static/src/input.css -o ./static/src/output.css --watch"

mmm = {composite = ["makemigrations", "migrate"]}
dev = {composite = ["migrate", "start"]}


[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
